[project]
name = "mdscraper"
version = "0.1.0"
description = "Combine text files into a single markdown document"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mdscraper = "mdscraper.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdscraper"]
